Docker setup: Remove Java dependency from host, separate Sonar reports by module.